cmake_minimum_required(VERSION 3.29)
project(part-2-chapter-7)

set(CMAKE_CXX_STANDARD 20)

add_executable(part-2-7-2 7-2-Mail-Receiver.cpp)
add_executable(part-2-7-3 7-3-Mail-Sender.cpp)
add_executable(part-2-7-4 7-4-PartAdder.cpp)
add_executable(part-2-7-5 7-5-NonStopAdderManager.cpp)
add_executable(part-2-7-6 7-6-AdderManager.cpp)
